# NoxPanel_Suite_WIP

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLEANUP_REPORT.md  CODE_QUALITY_REPORT.md  Dockerfile  ENTERPRISE_TRANSFORMATION_SUMMARY.md  INSTALLATION_GUIDE.md  NOXSUITE_README.md  README.md  TESTSPRITE_AUTOMATION_WORKFLOW_VERIFIED.md  TESTSPRITE_MCP_INTEGRATION_COMPLETE.md  advanced_automation_demo.py  advanced_integration_test.py  agent_coordinator.py  analysis-results-final.json  analysis-results.json  autonomous_mcp_agent.py  autonomous_monitor.py  chatgpt_cross_validator.py  chatgpt_validator.py  check_rlvr_score.py  cleanup_project.py  code_quality_improver.py  comprehensive_audit_findings.json  comprehensive_fix.py  comprehensive_mcp_validator.py  copilot_tools_monitor.py  current_security_analysis.json  demo_automation_scenarios.py  demo_noxpanel_system.py  display_audit_results.py  docker-compose-optimized.yml  docker-compose-production.yml  docker-compose-simple.yml  docker-compose.dev-networking.yml  docker-compose.dev.yml  docker-compose.langflow.yml  docker-compose.noxsuite.yml  (+67 more)
.github/ISSUE_TEMPLATE/: audit.md  config.yml
.github/workflows/: ci-cd.yml  ci.yml  code-quality.yml  production.yml  testsprite-autonomous.yml  testsprite-nightly-full-suite.yml
AI/NoxPanel/: .env.example  .gitignore  Dockerfile  simple_noxpanel_fixed.py  test_server_optimized.py  unified_plugin_system.py
NoxPanel/: .env.example  app.py  requirements.txt
NoxPanel/api/: __init__.py  auth.py  crawler.py  dashboard.py  plugins.py  security.py  websocket.py
NoxPanel/noxcore/: database.py  database_admin.py  database_service.py  mariadb_migration.py  migrations.py  repositories.py  security_monitor.py
NoxPanel/tests/: test_database.py  test_mariadb_migration.py  test_security_monitor.py
aethercore/: Dockerfile
backend/fastapi/: main.py
demo_data/: vulnerable_code.py
docs/: database_schema.md
docs/enterprise/: api-reference.md  deployment-guide.md  generation-summary.json  security-guide.md
enterprise/: Dockerfile.auth  Dockerfile.gateway  Dockerfile.resource  Dockerfile.tenant  Dockerfile.web
examples/: database_integration.py
frontend/: package.json  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.tsx  index.css  index.tsx  serviceWorkerRegistration.ts
langflow/: component_registry.py
langflow/components/: __init__.py  noxsuite_docker_manager.py  noxsuite_mcp_orchestrator.py  noxsuite_multi_agent_coordinator.py  noxsuite_system_monitor.py
langflow/flows/: testsprite_validation_agent.json
langflow_agents/: chatgpt_verification_agent.py  diagnostic_reporting_agent.py  integration_manager_agent.py  system_auditor_agent.py  workflow_executor_agent.py
logs/auto_repair/: auto_repair_report_20250730_105637.json  github_auto_repair_summary_20250730_105637.md
logs/autonomous_testing/: test_suites_20250730_103911.json  test_suites_20250730_104159.json  testsprite_log_20250730_104407.txt  testsprite_log_20250730_105627.txt  testsprite_results_20250730_104407.json  testsprite_results_20250730_105627.json  testsprite_summary_20250730_104407.md  testsprite_summary_20250730_105627.md
noxsuite_env/: pyvenv.cfg
noxsuite_env/Scripts/: activate  activate.bat
powershell/: system_health_audit.ps1
pr_recommendations/: implementation_roadmap.md  recommendations.json
pr_recommendations/templates/: pr_01_security.md  pr_02_quality.md  pr_03_feature.md  pr_04_frontend.md
tests/: __init__.py
tests/integration/: test_system.py
(+123 files in other folders)
